2017-03-08  Barton E. Schaefer  <schaefer@zsh.org>

	* 40799: Src/params.c: fix $- expansion partly broken by 40760

	* 40763: Src/Zle/compmatch.c, Src/Zle/computil.c, Src/utils.c:
	count wide characters and Cmatcher pointers more sanely in
	cfp_matcher_pats(), and count characters in pattern_match()
	the same way to stay in sync; might not fix wide-char matching
	in completion matcher-lists but should avoid wild pointer crash

2017-03-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 40745 + 40753: Src/init.c, Src/params.c: Fix 'unset
	ZLE_RPROMPT_INDENT' not restoring the default behaviour.

	* 40744: Doc/Zsh/grammar.yo: Document the SHORT_LOOPS 'function'
	syntax.

2017-03-07  Peter Stephenson  <p.stephenson@samsung.com>

	* Sebastian: 40706: Test/V11db_gdbm.ztst: Fix ordering
	dependence in gdbm test.

	* 40760: Src/cond.c, Src/exec.c, Src/glob.c, Src/lex.c,
	Src/math.c, Src/parse.c, Src/pattern.c, Src/subst.c,
	Src/utils.c, Src/zsh.h, Test/D02glob.ztst: Always tokenise '-'
	to Dash to eliminate niggles with range matches in complicated
	contexts.  Match both - or Dash in contexts that don't care.

2017-03-07  Mikael Magnusson  <mikachu@gmail.com>

	* 40780: Completion/Unix/Command/_mount: Don't use =~ for simple
	prefix match

2017-03-05  Barton E. Schaefer  <schaefer@zsh.org>

	* Sebastian: 40726: Doc/Zsh/mod_curses.yo, Src/Modules/curses.c,
	configure.ac: add "zcurses resize" for sane terminal size change

2017-03-04  Barton E. Schaefer  <schaefer@zsh.org>

	* Sebastian: 40781: Src/params.c, Test/A06assign.ztst: optimize
	array assignment, similar to 39995 for string assignment

	* 40654: Src/exec.c: exit cleanly from special POSIXBUILTINS in
	subshells

2017-03-04  Oliver Kiddle  <opk@zsh.org>

	* unposted (github): Christoffer Aasted:
	Completion/Unix/Command/_ant: allow -Dproperty=/path_complete

	* unposted (from Ferenc- via github): Completion/Unix/Command/_gcc:
	Add newer C++ standard options to gcc completion
